--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.size-14 {
+    width: 14px;
+    height: 14px;
+}
+
+.size-16 {
+    width: 16px;
+    height: 16px;;
+}
